<resources>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>
    <string name="app_name">Butterfly Recognizer</string>
    <string name="b_kinds">Gatunki motyli</string>
    <string name="g_predict">Rozpoznawanie za pomocą galerii</string>
    <string name="c_predict">Rozpoznawanie za pomocą kamery</string>
    <string name="rt_predict">Rozpoznawanie w czasie rzeczywistym</string>
    <string name="butterfly_name_0">Acherontia atropos</string>
    <string name="butterfly_name_1">Aglais io</string>
    <string name="butterfly_name_2">Anthocharis cardamines</string>
    <string name="butterfly_name_3">Astraptes fulgerator</string>
    <string name="butterfly_name_4">Attacus atlas</string>
    <string name="butterfly_name_5">Autochton cellus</string>
    <string name="butterfly_name_6">Battus philenor</string>
    <string name="butterfly_name_7">Carterocephalus palaemon</string>
    <string name="butterfly_name_8">Chlosyne janais</string>
    <string name="butterfly_name_9">Chrysiridia rhipheus</string>
    <string name="butterfly_name_10">Cithaerias pireta</string>
    <string name="butterfly_name_11">Colias philodice</string>
    <string name="butterfly_name_12">Danaus gilippus</string>
    <string name="butterfly_name_13">Danaus plexippus</string>
    <string name="butterfly_name_14">Diaethria anna</string>
    <string name="butterfly_name_15">Dryas iulia</string>
    <string name="butterfly_name_16">Epargyreus clarus</string>
    <string name="butterfly_name_17">Euchloe ausonides</string>
    <string name="butterfly_name_18">Gonepteryx rhamni</string>
    <string name="butterfly_name_19">Heliconius charithonia</string>
    <string name="butterfly_name_20">Hypolimnas bolina</string>
    <string name="butterfly_name_21">Idea leuconoe</string>
    <string name="butterfly_name_22">Iphiclides podalirius</string>
    <string name="butterfly_name_23">Kallima inachus</string>
    <string name="butterfly_name_24">Libytheana carinenta</string>
    <string name="butterfly_name_25">Limenitis archippus</string>
    <string name="butterfly_name_26">Limenitis arthemis</string>
    <string name="butterfly_name_27">Lycaena arota</string>
    <string name="butterfly_name_28">Lysandra bellargus</string>
    <string name="butterfly_name_29">Megisto cymela</string>
    <string name="butterfly_name_30">Neophasia menapia</string>
    <string name="butterfly_name_31">Neozephyrus quercus</string>
    <string name="butterfly_name_32">Nymphalis antiopa</string>
    <string name="butterfly_name_33">Papilio aegeus</string>
    <string name="butterfly_name_34">Papilio crino</string>
    <string name="butterfly_name_35">Papilio glaucus</string>
    <string name="butterfly_name_36">Papilio indra</string>
    <string name="butterfly_name_37">Papilio ulysses</string>
    <string name="butterfly_name_38">Parantica sita</string>
    <string name="butterfly_name_39">Parnassius clodius</string>
    <string name="butterfly_name_40">Phocides pigmalion</string>
    <string name="butterfly_name_41">Pholisora catullus</string>
    <string name="butterfly_name_42">Phyciodes tharos</string>
    <string name="butterfly_name_43">Pieris rapae</string>
    <string name="butterfly_name_44">Polygonia comma</string>
    <string name="butterfly_name_45">Polygonia interrogationis</string>
    <string name="butterfly_name_46">Pontia beckerii</string>
    <string name="butterfly_name_47">Riodinidae</string>
    <string name="butterfly_name_48">Satyrium pruni</string>
    <string name="butterfly_name_49">Siproeta stelenes</string>
    <string name="butterfly_name_50">Strymon melinus</string>
    <string name="butterfly_name_51">Vanessa atalanta</string>
    <string name="butterfly_name_52">Vanessa cardui</string>
    <string name="butterfly_name_53">Zerene cesonia</string>
    <string name="butterfly_name_54">Zygaena filipendulae</string>
    <string name="butterfly_info_unknown">Nie znaleziono informacji</string>
    <string name="butterfly_info_0">Imago spotykane są w koloniach pszczoły miodnej, gdzie nie niepokojone odżywiają się miodem i nektarem. Pszczoły nie atakują motyla dzięki zjawisku chemicznej mimikry. Rozpiętość skrzydeł 10–14 cm, gąsienice dorastają do 13 cm. Masa ciała do 10 g.</string>
    <string name="butterfly_info_1">Gatunek motyla z rodziny rusałkowatych. Występuje w Azji i Europie, a w Polsce jest jednym z najbardziej pospolitych motyli. Występuje na polanach i skrajach lasów, w ogrodach, sadach, na nieużytkach i w wielu innych miejscach. Wszędzie jest bardzo pospolita. Postać dorosła występuje przez całe lato, można ją spotkać na różnych kwiatach, z których spija nektar.</string>
    <string name="butterfly_info_2">Skrzydła o rozpiętości 35–40 mm, z wierzchu białe. Na przednim skrzydle czarna plama wierzchołkowa, na żyłce poprzecznej czarna plamka. Spód skrzydeł biały z zielonkawym deseniem. Wyraźnie zaznaczony dymorfizm płciowy. U samca po obu stronach przedniego skrzydła, w przedniej części pomarańczowa plama.</string>
    <string name="butterfly_info_3">Występuje w całej Ameryce, od południowych Stanów Zjednoczonych po północną Argentynę. Gąsienice ostatniego stadium są czarne z wzorem składającym się z jasnych do jasnożółtych kropek po bokach lub pierścieni o różnej grubości, czasami przerywanych na grzbiecie, w gama kolorów od białego do pomarańczowo-czerwonego.</string>
    <string name="butterfly_info_4">Uznawany za trzecią największą ćmę świata i z tego powodu często spotykany w hodowlach. W naturze występuje w Azji Południowo–Wschodniej, w południowych Chinach i Indonezji. Skrzydła osiągają powierzchnię 400 cm² przy rozpiętości 25–30 cm.</string>
    <string name="butterfly_info_5">Górna część skrzydeł jest czekoladowo-brązowa ze złotym pasem środkowym na przednim skrzydle. Tylne skrzydło ma frędzle w kratkę. Na wschodzie Stanów motyl ten preferuje wilgotne, strome lasy, podczas gdy na południowym zachodzie preferuje siedliska nadbrzeżne w kanionie. Wydaje się, że spada na wschodzie, gdzie stracił siedlisko wokół Waszyngtonu i wokół Zachodniej Wirginii.</string>
    <string name="butterfly_info_6">Paszczyna pajczakowata jest szeroko rozpowszechniona w Ameryce Północnej. Istnieje również izolowana populacja w środkowej Kalifornii. Motyl często występuje w cieplejszych, bardziej umiarkowanych środowiskach i można go znaleźć głównie na otwartych łąkach, lasach, łąkach i ogrodach przydomowych.</string>
    <string name="butterfly_info_7">Gatunek holarktyczny, w Polsce występuje w południowej, zachodniej i wschodniej części kraju. Obrzeża lasów, drogi w lasach, polany, niezwarte zarośla, m.in. kserotermiczne. Rozpiętość skrzydeł od 26 do 28 mm, dymorfizm płciowy słabo zaznaczony.</string>
    <string name="butterfly_info_8">Dorosłe osobniki zamieszkują obrzeża nizinnych lasów tropikalnych i subtropikalnych, pól i wzdłuż strumieni, gdzie żywią się nektarem kwiatowym. W tropikach rozmnażanie jest ciągłe, podczas gdy na obszarach o umiarkowanym klimacie kilka lęgów jest produkowanych od lipca do listopada. Maksymalna rozpiętość skrzydeł to 4,8–6,7 cm.</string>
    <string name="butterfly_info_9">Wystepują w Madagaskarze. Rozpiętość skrzydeł wynosi około 8–10 cm. Należy do grupy najbardziej okazałych ciem. Jego tylne skrzydła są zakończone smukłymi ogonami.</string>
    <string name="butterfly_info_10">Gatunek ten, podobnie jak wszyscy członkowie Haeterini, występuje tylko w mocno zacienionych obszarach lasów deszczowych. Wydaje się, że występuje na wysokościach od poziomu morza do około 2000 m, od Meksyku do Boliwii.</string>
    <string name="butterfly_info_11">Motyl ten można spotkać na polach, trawnikach, polach lucerny lub koniczyny, łąkach i poboczach dróg. Roje tych motyli gromadzą się w kałużach błota. Obejmują one większość Ameryki Północnej z wyjątkiem Labradoru, Nunavut i północnego Quebecu. Migrują co roku.</string>
    <string name="butterfly_info_12">Danaus gilippus znalazła się w tropikach oraz w umiarkowanych regionach obu Ameryk, Azji i Afryki. Zabłąkane okazy znajdują się w Europie. W całym swoim rozmieszczeniu królową można spotkać na otwartej przestrzeni, na łąkach, polach i bagnach.</string>
    <string name="butterfly_info_13">Może być najbardziej znanym motylem północnoamerykańskim i jest uważany za kultowy gatunek zapylacza. Jego skrzydła mają łatwo rozpoznawalny czarny, pomarańczowy i biały wzór o rozpiętości skrzydeł 8,9–10,2 cm. Naśladowca Müllera, motyl wicekról, ma podobny kolor i wzór, ale jest znacznie mniejszy i ma dodatkowy czarny pasek na każdym tylnym skrzydle.</string>
    <string name="butterfly_info_14">Diaethria anna, znana również jako osiemdziesiąt osiem lat Anny, jest motylem w wilgotnych lasach tropikalnych w Ameryce Środkowej. W rzadkich przypadkach można go znaleźć jako zabłąkaną w południowym Teksasie. Jego wierzchnia strona jest ciemnobrązowa z metalicznym niebiesko-zielonym paskiem na przednich skrzydłach.</string>
    <string name="butterfly_info_15">Preferuje otwarte, słoneczne przerwy w zamieszkiwanych przez siebie lasach subtropikalnych i tropikalnych. Motyl jest również powszechny na otwartych przestrzeniach, takich jak ogrody, pastwiska dla bydła i polany leśne.</string>
    <string name="butterfly_info_16">Występuje na terenie Ameryki Północnej, od południowej części Kanady, przez większość obszaru USA po północny Meksyk. Nie występuje w Wielkiej Kotlinie i zachodnim Teksasie. Rozpowszechniony we wschodniej części kontynentu, rzadziej spotykany w zachodniej. Spotykany na obrzeżach lasów, w ogrodach i na polach.</string>
    <string name="butterfly_info_17">Zwykle żyją na otwartych, nasłonecznionych terenach, takich jak doliny, zbocza wzgórz, pola i łąki. Często lecą nisko obok strumieni i szlaków. Warunkiem siedliskowym motyla marmurkowego jest roślina „żywiciel”. Zapewnia to miejsce do składania jaj przez motyla i zapewnia pożywienie dla rosnących gąsienic.</string>
    <string name="butterfly_info_18">Jest bardzo pospolitym motylem. Występuje zarówno na nizinach, jak i w górach. Typowym środowiskiem życia są wolne przestrzenie w pobliżu lasów. Można go także spotkać na nasłonecznionych polanach i w ogrodach, lasach, zaroślach, miedzach, terenach ruderalnych. Rozpiętość skrzydeł: 48–55 mm.</string>
    <string name="butterfly_info_19">Występuje w Ameryce Południowej, Ameryce Środkowej, Indiach Zachodnich, Meksyku, południowym Teksasie i półwyspie Floryda. Dorośli czasami migrują na północ do Nowego Meksyku, Południowej Karoliny i Nebraski w cieplejszych miesiącach. Rozmieszczenie geograficzne H. charithonia pokrywa się z zasięgami innych motyli, co czasami prowadzi do konfliktów.</string>
    <string name="butterfly_info_20">H. bolina jest ogólnie pospolitym motylem w większości tropikalnych i subtropikalnych typów siedlisk, w tym w wilgotnych/suchych lasach (takich jak tropikalna sawanna), lasach deszczowych i zaroślach. Jest częstym gościem podwórek podmiejskich i innych obszarów ludzkiego niepokoju.</string>
    <string name="butterfly_info_21">Rozpiętość skrzydeł tego motyla wynosi ok. 9,5–10,8 cm. Skrzydła są przezroczyste, szaro-białe, oznaczone czarnym, charakterystycznym wzorem. Ich odwłok jest smukły i delikatny. Poruszają się lotem ślizgowym, raczej powolnym. Gąsienica tego motyla jest czarna, pokryta żółtymi i czerwonymi plamkami. Występują w Indiach, Malezji, Filipinach, Tajwanie, Australii.</string>
    <string name="choose_img">Kliknij, aby wybrać obraz</string>
    <string name="prediction_label">Predykcja</string>
    <string name="butterfly_predict">Zdefiniowano:</string>
    <string name="butterfly_accuracy">Dokładność:</string>
    <string name="info_text">Opis</string>
</resources>