<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/white"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/chooseimg_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_alignParentTop="true"
            android:background="@color/blue"
            app:theme="@style/ToolbarTheme">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choose_img"
                android:layout_marginStart="30dp"
                android:textColor="@android:color/white"
                android:textSize="23sp" />
        </androidx.appcompat.widget.Toolbar>
        <ImageView
            android:id="@+id/img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_below="@+id/chooseimg_toolbar"
            tools:ignore="ContentDescription" />
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/prediction_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_below="@+id/img"
            android:visibility="invisible"
            android:background="@color/blue">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/prediction_label"
                android:textColor="@android:color/white"
                android:textSize="22sp" />
        </androidx.appcompat.widget.Toolbar>
        <TextView
            android:id="@+id/butterfly_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/prediction_toolbar"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/butterfly_predict"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:visibility="invisible" />
        <TextView
            android:id="@+id/accuracy_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/butterfly_label"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/butterfly_accuracy"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:visibility="invisible" />
        <TextView
            android:id="@+id/butterfly_output"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/prediction_toolbar"
            android:layout_marginStart="145dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/blue"
            android:textSize="20sp"
            android:visibility="invisible" />
        <TextView
            android:id="@+id/accuracy_output"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/butterfly_label"
            android:layout_marginStart="145dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/blue"
            android:textSize="20sp"
            android:visibility="invisible" />
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/info_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_below="@+id/accuracy_label"
            android:layout_marginTop="10dp"
            android:visibility="invisible"
            android:background="@color/blue">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/info_text"
                android:textColor="@android:color/white"
                android:textSize="22sp" />
        </androidx.appcompat.widget.Toolbar>
        <ScrollView
            android:layout_width="fill_parent"
            android:layout_below="@+id/info_toolbar"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_height="fill_parent">
            <TextView
                android:id="@+id/info_output"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:visibility="invisible" />
        </ScrollView>

</RelativeLayout>